Intermediate Code Generation/1905040/y.output
Terminals unused in grammar

    DO
    BREAK
    CHAR
    DOUBLE
    SWITCH
    CASE
    DEFAULT
    CONTINUE
    CONST_CHAR
    CONST_STRING


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN RPAREN SEMICOLON

    9 $@1: ε

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

   11 $@2: ε

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   13 parameter_list: parameter_list COMMA type_specifier ID
   14               | parameter_list COMMA type_specifier
   15               | type_specifier ID
   16               | type_specifier

   17 compound_statement: LCURL statements RCURL
   18                   | LCURL RCURL

   19 var_declaration: type_specifier declaration_list SEMICOLON

   20 type_specifier: INT
   21               | FLOAT
   22               | VOID

   23 declaration_list: declaration_list COMMA ID
   24                 | declaration_list COMMA ID LSQUARE CONST_INT RSQUARE
   25                 | ID
   26                 | ID LSQUARE CONST_INT RSQUARE

   27 statements: statement
   28           | statements statement

   29 statement: var_declaration
   30          | expression_statement
   31          | compound_statement
   32          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   33          | IF LPAREN expression RPAREN M statement
   34          | IF LPAREN expression RPAREN M statement ELSE N M statement
   35          | WHILE M LPAREN expression RPAREN M statement
   36          | PRINTLN LPAREN ID RPAREN SEMICOLON
   37          | RETURN expression SEMICOLON

   38 expression_statement: SEMICOLON
   39                     | expression SEMICOLON

   40 variable: ID
   41         | ID LSQUARE expression RSQUARE

   42 expression: logic_expression
   43           | variable ASSIGNOP logic_expression

   44 logic_expression: rel_expression

   45 $@3: ε

   46 logic_expression: rel_expression $@3 LOGICOP M rel_expression

   47 rel_expression: simple_expression
   48               | simple_expression RELOP simple_expression

   49 simple_expression: term
   50                  | simple_expression ADDOP term

   51 term: unary_expression
   52     | term MULOP unary_expression

   53 unary_expression: ADDOP unary_expression
   54                 | NOT unary_expression
   55                 | factor

   56 factor: variable
   57       | ID LPAREN argument_list RPAREN
   58       | LPAREN expression RPAREN
   59       | CONST_INT
   60       | CONST_FLOAT
   61       | variable INCOP
   62       | variable DECOP

   63 argument_list: arguments
   64              | ε

   65 arguments: arguments COMMA logic_expression
   66          | logic_expression

   67 M: ε

   68 N: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF <symbol_info> (258) 33 34
    ELSE <symbol_info> (259) 34
    FOR <symbol_info> (260) 32
    WHILE <symbol_info> (261) 35
    DO <symbol_info> (262)
    BREAK <symbol_info> (263)
    INT <symbol_info> (264) 20
    CHAR <symbol_info> (265)
    FLOAT <symbol_info> (266) 21
    DOUBLE <symbol_info> (267)
    VOID <symbol_info> (268) 22
    RETURN <symbol_info> (269) 37
    SWITCH <symbol_info> (270)
    CASE <symbol_info> (271)
    DEFAULT <symbol_info> (272)
    CONTINUE <symbol_info> (273)
    PRINTLN <symbol_info> (274) 36
    ID <symbol_info> (275) 7 8 10 12 13 15 23 24 25 26 36 40 41 57
    CONST_INT <symbol_info> (276) 24 26 59
    CONST_FLOAT <symbol_info> (277) 60
    CONST_CHAR <symbol_info> (278)
    CONST_STRING <symbol_info> (279)
    RELOP <symbol_info> (280) 48
    MULOP <symbol_info> (281) 52
    LOGICOP <symbol_info> (282) 46
    ADDOP <symbol_info> (283) 50 53
    LPAREN <symbol_info> (284) 7 8 10 12 32 33 34 35 36 57 58
    RPAREN <symbol_info> (285) 7 8 10 12 32 33 34 35 36 57 58
    LCURL <symbol_info> (286) 17 18
    RCURL <symbol_info> (287) 17 18
    LSQUARE <symbol_info> (288) 24 26 41
    RSQUARE <symbol_info> (289) 24 26 41
    COMMA <symbol_info> (290) 13 14 23 24 65
    SEMICOLON <symbol_info> (291) 7 8 19 36 37 38 39
    ASSIGNOP <symbol_info> (292) 43
    NOT <symbol_info> (293) 54
    INCOP <symbol_info> (294) 61
    DECOP <symbol_info> (295) 62
    LOWER_THAN_ELSE (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    start <symbol_info> (43)
        on left: 1
        on right: 0
    program <symbol_info> (44)
        on left: 2 3
        on right: 1 2
    unit <symbol_info> (45)
        on left: 4 5 6
        on right: 2 3
    func_declaration <symbol_info> (46)
        on left: 7 8
        on right: 5
    func_definition <symbol_info> (47)
        on left: 10 12
        on right: 6
    $@1 (48)
        on left: 9
        on right: 10
    $@2 (49)
        on left: 11
        on right: 12
    parameter_list <symbol_info> (50)
        on left: 13 14 15 16
        on right: 7 10 13 14
    compound_statement <symbol_info> (51)
        on left: 17 18
        on right: 10 12 31
    var_declaration <symbol_info> (52)
        on left: 19
        on right: 4 29
    type_specifier <symbol_info> (53)
        on left: 20 21 22
        on right: 7 8 10 12 13 14 15 16 19
    declaration_list <symbol_info> (54)
        on left: 23 24 25 26
        on right: 19 23 24
    statements <symbol_info> (55)
        on left: 27 28
        on right: 17 28
    statement <symbol_info> (56)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 27 28 32 33 34 35
    expression_statement <symbol_info> (57)
        on left: 38 39
        on right: 30 32
    variable <symbol_info> (58)
        on left: 40 41
        on right: 43 56 61 62
    expression <symbol_info> (59)
        on left: 42 43
        on right: 32 33 34 35 37 39 41 58
    logic_expression <symbol_info> (60)
        on left: 44 46
        on right: 42 43 65 66
    $@3 (61)
        on left: 45
        on right: 46
    rel_expression <symbol_info> (62)
        on left: 47 48
        on right: 44 46
    simple_expression <symbol_info> (63)
        on left: 49 50
        on right: 47 48 50
    term <symbol_info> (64)
        on left: 51 52
        on right: 49 50 52
    unary_expression <symbol_info> (65)
        on left: 53 54 55
        on right: 51 52 53 54
    factor <symbol_info> (66)
        on left: 56 57 58 59 60 61 62
        on right: 55
    argument_list <symbol_info> (67)
        on left: 63 64
        on right: 57
    arguments <symbol_info> (68)
        on left: 65 66
        on right: 63 65
    M <symbol_info> (69)
        on left: 67
        on right: 33 34 35 46
    N <symbol_info> (70)
        on left: 68
        on right: 34


State 0

    0 $accept: • start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   20 type_specifier: INT •

    $default  reduce using rule 20 (type_specifier)


State 2

   21 type_specifier: FLOAT •

    $default  reduce using rule 21 (type_specifier)


State 3

   22 type_specifier: VOID •

    $default  reduce using rule 22 (type_specifier)


State 4

    0 $accept: start • $end

    $end  shift, and go to state 11


State 5

    1 start: program •
    2 program: program • unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit •

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration •

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition •

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration •

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier • ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier • ID LPAREN RPAREN SEMICOLON
   10 func_definition: type_specifier • ID LPAREN parameter_list RPAREN $@1 compound_statement
   12                | type_specifier • ID LPAREN RPAREN $@2 compound_statement
   19 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end •

    $default  accept


State 12

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID • LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID • LPAREN RPAREN SEMICOLON
   10 func_definition: type_specifier ID • LPAREN parameter_list RPAREN $@1 compound_statement
   12                | type_specifier ID • LPAREN RPAREN $@2 compound_statement
   25 declaration_list: ID •
   26                 | ID • LSQUARE CONST_INT RSQUARE

    LPAREN   shift, and go to state 15
    LSQUARE  shift, and go to state 16

    $default  reduce using rule 25 (declaration_list)


State 14

   19 var_declaration: type_specifier declaration_list • SEMICOLON
   23 declaration_list: declaration_list • COMMA ID
   24                 | declaration_list • COMMA ID LSQUARE CONST_INT RSQUARE

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    7 func_declaration: type_specifier ID LPAREN • parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN • RPAREN SEMICOLON
   10 func_definition: type_specifier ID LPAREN • parameter_list RPAREN $@1 compound_statement
   12                | type_specifier ID LPAREN • RPAREN $@2 compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 19

    parameter_list  go to state 20
    type_specifier  go to state 21


State 16

   26 declaration_list: ID LSQUARE • CONST_INT RSQUARE

    CONST_INT  shift, and go to state 22


State 17

   23 declaration_list: declaration_list COMMA • ID
   24                 | declaration_list COMMA • ID LSQUARE CONST_INT RSQUARE

    ID  shift, and go to state 23


State 18

   19 var_declaration: type_specifier declaration_list SEMICOLON •

    $default  reduce using rule 19 (var_declaration)


State 19

    8 func_declaration: type_specifier ID LPAREN RPAREN • SEMICOLON
   12 func_definition: type_specifier ID LPAREN RPAREN • $@2 compound_statement

    SEMICOLON  shift, and go to state 24

    $default  reduce using rule 11 ($@2)

    $@2  go to state 25


State 20

    7 func_declaration: type_specifier ID LPAREN parameter_list • RPAREN SEMICOLON
   10 func_definition: type_specifier ID LPAREN parameter_list • RPAREN $@1 compound_statement
   13 parameter_list: parameter_list • COMMA type_specifier ID
   14               | parameter_list • COMMA type_specifier

    RPAREN  shift, and go to state 26
    COMMA   shift, and go to state 27


State 21

   15 parameter_list: type_specifier • ID
   16               | type_specifier •

    ID  shift, and go to state 28

    $default  reduce using rule 16 (parameter_list)


State 22

   26 declaration_list: ID LSQUARE CONST_INT • RSQUARE

    RSQUARE  shift, and go to state 29


State 23

   23 declaration_list: declaration_list COMMA ID •
   24                 | declaration_list COMMA ID • LSQUARE CONST_INT RSQUARE

    LSQUARE  shift, and go to state 30

    $default  reduce using rule 23 (declaration_list)


State 24

    8 func_declaration: type_specifier ID LPAREN RPAREN SEMICOLON •

    $default  reduce using rule 8 (func_declaration)


State 25

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 • compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 32


State 26

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN • SEMICOLON
   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN • $@1 compound_statement

    SEMICOLON  shift, and go to state 33

    $default  reduce using rule 9 ($@1)

    $@1  go to state 34


State 27

   13 parameter_list: parameter_list COMMA • type_specifier ID
   14               | parameter_list COMMA • type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 35


State 28

   15 parameter_list: type_specifier ID •

    $default  reduce using rule 15 (parameter_list)


State 29

   26 declaration_list: ID LSQUARE CONST_INT RSQUARE •

    $default  reduce using rule 26 (declaration_list)


State 30

   24 declaration_list: declaration_list COMMA ID LSQUARE • CONST_INT RSQUARE

    CONST_INT  shift, and go to state 36


State 31

   17 compound_statement: LCURL • statements RCURL
   18                   | LCURL • RCURL

    IF           shift, and go to state 37
    FOR          shift, and go to state 38
    WHILE        shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 40
    PRINTLN      shift, and go to state 41
    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 31
    RCURL        shift, and go to state 47
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49

    compound_statement    go to state 50
    var_declaration       go to state 51
    type_specifier        go to state 52
    statements            go to state 53
    statement             go to state 54
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 32

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement •

    $default  reduce using rule 12 (func_definition)


State 33

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON •

    $default  reduce using rule 7 (func_declaration)


State 34

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 • compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 64


State 35

   13 parameter_list: parameter_list COMMA type_specifier • ID
   14               | parameter_list COMMA type_specifier •

    ID  shift, and go to state 65

    $default  reduce using rule 14 (parameter_list)


State 36

   24 declaration_list: declaration_list COMMA ID LSQUARE CONST_INT • RSQUARE

    RSQUARE  shift, and go to state 66


State 37

   33 statement: IF • LPAREN expression RPAREN M statement
   34          | IF • LPAREN expression RPAREN M statement ELSE N M statement

    LPAREN  shift, and go to state 67


State 38

   32 statement: FOR • LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 68


State 39

   35 statement: WHILE • M LPAREN expression RPAREN M statement

    $default  reduce using rule 67 (M)

    M  go to state 69


State 40

   37 statement: RETURN • expression SEMICOLON

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 56
    expression         go to state 70
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 41

   36 statement: PRINTLN • LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 71


State 42

   40 variable: ID •
   41         | ID • LSQUARE expression RSQUARE
   57 factor: ID • LPAREN argument_list RPAREN

    LPAREN   shift, and go to state 72
    LSQUARE  shift, and go to state 73

    $default  reduce using rule 40 (variable)


State 43

   59 factor: CONST_INT •

    $default  reduce using rule 59 (factor)


State 44

   60 factor: CONST_FLOAT •

    $default  reduce using rule 60 (factor)


State 45

   53 unary_expression: ADDOP • unary_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable          go to state 74
    unary_expression  go to state 75
    factor            go to state 63


State 46

   58 factor: LPAREN • expression RPAREN

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 56
    expression         go to state 76
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 47

   18 compound_statement: LCURL RCURL •

    $default  reduce using rule 18 (compound_statement)


State 48

   38 expression_statement: SEMICOLON •

    $default  reduce using rule 38 (expression_statement)


State 49

   54 unary_expression: NOT • unary_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable          go to state 74
    unary_expression  go to state 77
    factor            go to state 63


State 50

   31 statement: compound_statement •

    $default  reduce using rule 31 (statement)


State 51

   29 statement: var_declaration •

    $default  reduce using rule 29 (statement)


State 52

   19 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 78

    declaration_list  go to state 14


State 53

   17 compound_statement: LCURL statements • RCURL
   28 statements: statements • statement

    IF           shift, and go to state 37
    FOR          shift, and go to state 38
    WHILE        shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 40
    PRINTLN      shift, and go to state 41
    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 31
    RCURL        shift, and go to state 79
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49

    compound_statement    go to state 50
    var_declaration       go to state 51
    type_specifier        go to state 52
    statement             go to state 80
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 54

   27 statements: statement •

    $default  reduce using rule 27 (statements)


State 55

   30 statement: expression_statement •

    $default  reduce using rule 30 (statement)


State 56

   43 expression: variable • ASSIGNOP logic_expression
   56 factor: variable •
   61       | variable • INCOP
   62       | variable • DECOP

    ASSIGNOP  shift, and go to state 81
    INCOP     shift, and go to state 82
    DECOP     shift, and go to state 83

    $default  reduce using rule 56 (factor)


State 57

   39 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 84


State 58

   42 expression: logic_expression •

    $default  reduce using rule 42 (expression)


State 59

   44 logic_expression: rel_expression •
   46                 | rel_expression • $@3 LOGICOP M rel_expression

    LOGICOP   reduce using rule 45 ($@3)
    $default  reduce using rule 44 (logic_expression)

    $@3  go to state 85


State 60

   47 rel_expression: simple_expression •
   48               | simple_expression • RELOP simple_expression
   50 simple_expression: simple_expression • ADDOP term

    RELOP  shift, and go to state 86
    ADDOP  shift, and go to state 87

    $default  reduce using rule 47 (rel_expression)


State 61

   49 simple_expression: term •
   52 term: term • MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 49 (simple_expression)


State 62

   51 term: unary_expression •

    $default  reduce using rule 51 (term)


State 63

   55 unary_expression: factor •

    $default  reduce using rule 55 (unary_expression)


State 64

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement •

    $default  reduce using rule 10 (func_definition)


State 65

   13 parameter_list: parameter_list COMMA type_specifier ID •

    $default  reduce using rule 13 (parameter_list)


State 66

   24 declaration_list: declaration_list COMMA ID LSQUARE CONST_INT RSQUARE •

    $default  reduce using rule 24 (declaration_list)


State 67

   33 statement: IF LPAREN • expression RPAREN M statement
   34          | IF LPAREN • expression RPAREN M statement ELSE N M statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 56
    expression         go to state 89
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 68

   32 statement: FOR LPAREN • expression_statement expression_statement expression RPAREN statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49

    expression_statement  go to state 90
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 69

   35 statement: WHILE M • LPAREN expression RPAREN M statement

    LPAREN  shift, and go to state 91


State 70

   37 statement: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 92


State 71

   36 statement: PRINTLN LPAREN • ID RPAREN SEMICOLON

    ID  shift, and go to state 93


State 72

   57 factor: ID LPAREN • argument_list RPAREN

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    $default  reduce using rule 64 (argument_list)

    variable           go to state 74
    logic_expression   go to state 94
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63
    argument_list      go to state 95
    arguments          go to state 96


State 73

   41 variable: ID LSQUARE • expression RSQUARE

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 56
    expression         go to state 97
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 74

   56 factor: variable •
   61       | variable • INCOP
   62       | variable • DECOP

    INCOP  shift, and go to state 82
    DECOP  shift, and go to state 83

    $default  reduce using rule 56 (factor)


State 75

   53 unary_expression: ADDOP unary_expression •

    $default  reduce using rule 53 (unary_expression)


State 76

   58 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 98


State 77

   54 unary_expression: NOT unary_expression •

    $default  reduce using rule 54 (unary_expression)


State 78

   25 declaration_list: ID •
   26                 | ID • LSQUARE CONST_INT RSQUARE

    LSQUARE  shift, and go to state 16

    $default  reduce using rule 25 (declaration_list)


State 79

   17 compound_statement: LCURL statements RCURL •

    $default  reduce using rule 17 (compound_statement)


State 80

   28 statements: statements statement •

    $default  reduce using rule 28 (statements)


State 81

   43 expression: variable ASSIGNOP • logic_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 74
    logic_expression   go to state 99
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 82

   61 factor: variable INCOP •

    $default  reduce using rule 61 (factor)


State 83

   62 factor: variable DECOP •

    $default  reduce using rule 62 (factor)


State 84

   39 expression_statement: expression SEMICOLON •

    $default  reduce using rule 39 (expression_statement)


State 85

   46 logic_expression: rel_expression $@3 • LOGICOP M rel_expression

    LOGICOP  shift, and go to state 100


State 86

   48 rel_expression: simple_expression RELOP • simple_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 74
    simple_expression  go to state 101
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 87

   50 simple_expression: simple_expression ADDOP • term

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable          go to state 74
    term              go to state 102
    unary_expression  go to state 62
    factor            go to state 63


State 88

   52 term: term MULOP • unary_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable          go to state 74
    unary_expression  go to state 103
    factor            go to state 63


State 89

   33 statement: IF LPAREN expression • RPAREN M statement
   34          | IF LPAREN expression • RPAREN M statement ELSE N M statement

    RPAREN  shift, and go to state 104


State 90

   32 statement: FOR LPAREN expression_statement • expression_statement expression RPAREN statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49

    expression_statement  go to state 105
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 91

   35 statement: WHILE M LPAREN • expression RPAREN M statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 56
    expression         go to state 106
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 92

   37 statement: RETURN expression SEMICOLON •

    $default  reduce using rule 37 (statement)


State 93

   36 statement: PRINTLN LPAREN ID • RPAREN SEMICOLON

    RPAREN  shift, and go to state 107


State 94

   66 arguments: logic_expression •

    $default  reduce using rule 66 (arguments)


State 95

   57 factor: ID LPAREN argument_list • RPAREN

    RPAREN  shift, and go to state 108


State 96

   63 argument_list: arguments •
   65 arguments: arguments • COMMA logic_expression

    COMMA  shift, and go to state 109

    $default  reduce using rule 63 (argument_list)


State 97

   41 variable: ID LSQUARE expression • RSQUARE

    RSQUARE  shift, and go to state 110


State 98

   58 factor: LPAREN expression RPAREN •

    $default  reduce using rule 58 (factor)


State 99

   43 expression: variable ASSIGNOP logic_expression •

    $default  reduce using rule 43 (expression)


State 100

   46 logic_expression: rel_expression $@3 LOGICOP • M rel_expression

    $default  reduce using rule 67 (M)

    M  go to state 111


State 101

   48 rel_expression: simple_expression RELOP simple_expression •
   50 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 87

    $default  reduce using rule 48 (rel_expression)


State 102

   50 simple_expression: simple_expression ADDOP term •
   52 term: term • MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 50 (simple_expression)


State 103

   52 term: term MULOP unary_expression •

    $default  reduce using rule 52 (term)


State 104

   33 statement: IF LPAREN expression RPAREN • M statement
   34          | IF LPAREN expression RPAREN • M statement ELSE N M statement

    $default  reduce using rule 67 (M)

    M  go to state 112


State 105

   32 statement: FOR LPAREN expression_statement expression_statement • expression RPAREN statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 56
    expression         go to state 113
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 106

   35 statement: WHILE M LPAREN expression • RPAREN M statement

    RPAREN  shift, and go to state 114


State 107

   36 statement: PRINTLN LPAREN ID RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 115


State 108

   57 factor: ID LPAREN argument_list RPAREN •

    $default  reduce using rule 57 (factor)


State 109

   65 arguments: arguments COMMA • logic_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 74
    logic_expression   go to state 116
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 110

   41 variable: ID LSQUARE expression RSQUARE •

    $default  reduce using rule 41 (variable)


State 111

   46 logic_expression: rel_expression $@3 LOGICOP M • rel_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    NOT          shift, and go to state 49

    variable           go to state 74
    rel_expression     go to state 117
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 112

   33 statement: IF LPAREN expression RPAREN M • statement
   34          | IF LPAREN expression RPAREN M • statement ELSE N M statement

    IF           shift, and go to state 37
    FOR          shift, and go to state 38
    WHILE        shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 40
    PRINTLN      shift, and go to state 41
    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 48
    NOT          shift, and go to state 49

    compound_statement    go to state 50
    var_declaration       go to state 51
    type_specifier        go to state 52
    statement             go to state 118
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 113

   32 statement: FOR LPAREN expression_statement expression_statement expression • RPAREN statement

    RPAREN  shift, and go to state 119


State 114

   35 statement: WHILE M LPAREN expression RPAREN • M statement

    $default  reduce using rule 67 (M)

    M  go to state 120


State 115

   36 statement: PRINTLN LPAREN ID RPAREN SEMICOLON •

    $default  reduce using rule 36 (statement)


State 116

   65 arguments: arguments COMMA logic_expression •

    $default  reduce using rule 65 (arguments)


State 117

   46 logic_expression: rel_expression $@3 LOGICOP M rel_expression •

    $default  reduce using rule 46 (logic_expression)


State 118

   33 statement: IF LPAREN expression RPAREN M statement •
   34          | IF LPAREN expression RPAREN M statement • ELSE N M statement

    ELSE  shift, and go to state 121

    $default  reduce using rule 33 (statement)


State 119

   32 statement: FOR LPAREN expression_statement expression_statement expression RPAREN • statement
